fix spacing and elements

--- a/styles/index.css
+++ b/styles/index.css
@@ -63,13 +63,9 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   row-gap: 12px;
-  column-gap: 12px;
+  column-gap: 20px;
   margin-top: 40px;
   margin-bottom: 40px;
-}
-
-.link {
-  margin-right: 20px;
 }
 
 .link:last-of-type {
@@ -136,15 +132,10 @@ body {
   .links {
     justify-content: flex-start;
     margin-bottom: 0;
+    column-gap: 30px;
   }
 
   .link a {
     font-size: 20px;
   }
 }
-
-/* @media screen and (min-width: 1000px) {
-  .content-container {
-    padding: 50px;
-  }
-} */
